--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <h1>trabajando con git</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium sed sunt, aspernatur porro debitis totam quos consequatur quas doloremque ea eius ex! Veritatis error aliquid voluptatum neque doloribus nihil cum.</p>
+    <p>Lorem ipsum dolor sit amet  jshdjksdhsjdkhsdjkhskdjconsectetur adipisicing elit. Accusantium sed sunt, aspernatur porro debitis totam quos consequatur quas doloremque ea eius ex! Veritatis error aliquid voluptatum neque doloribus nihil cum.</p>
     <span></span>
     <div></div>
     <h2>hola</h2>
